# Crafter

./: .gitignore  pyproject.toml
.claude/skills/knowledge-base/: SKILL.md
crafter_rl/: __init__.py  env.py  eval.py
crafter_rl/kernels/: __init__.py
crafter_rl/utils/: __init__.py
crafter_rl/wandb/: __init__.py
csrc/: README.md
docs/: cuda-kernels.md  experiment-workflow.md  profiling.md  promotion-checklist.md  repo-structure.md  wandb-conventions.md
experiments/: ledger.jsonl
experiments/20260624-sb3-baselines/: README.md  run_sweep.sh  summary.txt  train.py
experiments/20260625-dreamerv3/: README.md  report_results.py  run_dreamerv3.sh  run_sweep_dreamerv3.sh  setup.sh  ttlcd_sidecar.py  wandb_streamer.py
experiments/_template/: README.md  env.py  train.py
knowledge_base/: README.md  SYNTHESIS_TEMPLATE.md  open_questions.md
knowledge_base/indices/: by_mechanism.md  by_methodology.md  by_relevance.md  by_subfield.md  by_theme.md
knowledge_base/papers/brain_like_vi_2024/: synthesis.md
knowledge_base/papers/dacosta_active_inference_2020/: synthesis.md
knowledge_base/papers/friston_fep_2009/: synthesis.md
knowledge_base/papers/hafner_crafter_2022/: synthesis.md
knowledge_base/syntheses/: 01_central_thesis_iterative_inference_faster_learning.md  02_training_iteration_vs_test_iteration.md  03_hopfield_attention_pc_bridge.md
profile/: README.md  doctor.py  run.py  targets.py
profile/backends/: __init__.py  _common.py  ncu.py  nsys.py  perf.py  pyspy.py  throughput.py  torch_prof.py
prototypes/: README.md
(+25 files in other folders)
