[project]
name = "crafter-rl"
version = "0.1.0"
description = "Crafter RL research experiments + shared crafter_rl package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crafter>=1.8.3",
    "stable-baselines3>=2.9.0",
    "tensorboard>=2.20.0",
    "wandb>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crafter_rl"]
